turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:3: error: identifier expected but 'false' found.
  var col:Boolean == false
                     ^